version 2024a, in progress
- $sysinfo bundle: add gnuplot version as scalar ("gnuplot")
- "plot" command: update the help text and apply a fix for the
  case of showing multiple bands
- "info" command: add --to-file and --from-file options for
  manipulating the description of a dataset
- "tsls" command: add a --matrix-diff option for the Hausman
  test, using the method of Padadopoulos (Econometrics, 2023)
- "loop foreach": support arrays and bundles that are located
  inside other arrays or bundles
- Fix broken backward compatibility in handling of backslash
  followed by double-quote in string literals
- Fix bug: crash when plotting matrix data with the multiple
  bands option
- Fix bug: restore support for reading JMulTi .dat files
- GUI: apply some legibility fixes for dark GTK themes
- GUI: enable the advertised keystrokes in file "browser"
  windows (bug #294)

2023-12-05 version 2023c
- New commands "gridplot" and "gpbuild" for constructing
  composite plots
- "gnuplot" command: implement new option syntax to support
  multiple "bands" in a single plot (but continue to support
  the old band syntax until further notice)
- "panel" command: support the --cluster option to produce
  a greater variety of robust standard errors, including two-
  way clustering; add an option to use the Driscoll-Kraay
  covariance estimator; and support the --no-df-corr option
- "tsls" command: if the --robust option is given, compute a
  robust variant of the Hausman test
- "scatters" command: expose its time-series functionality
  under the name command-name "tsplots"
- String-valued series: support returning such series from a
  user function, and loosen the restrictions on assignment to
  such series
- New usage of the '*' operator to augment a string via
  repetition, for example: string s = "abc" * 3
- New function asort() for sorting arrays of all types
- New function corresp() to determine the correspondence (if
  any) between two series or vectors